samples/_failures_safe/1761329291_e15c99_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_53bff8b0.c: In function ‘main’:
./samples/SAFE/__tmp_53bff8b0.c:162:9: error: expected identifier or ‘(’ at end of input
  162 |         int
      |         ^~~
./samples/SAFE/__tmp_53bff8b0.c:162:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_53bff8b0.c:162:9: error: expected declaration or statement at end of input
